KIK-1928, Fix cut off letters in the fields client portal

--- a/app/assets/less/layout/_main.less
+++ b/app/assets/less/layout/_main.less
@@ -2429,6 +2429,14 @@ th, .th {
       padding: 6px 12px;
       line-height: 24px;
     }
+
+    .Select-input > input {
+      padding: 4px 0;
+    }
+
+    .form-search .form-control {
+      padding: 4px 11px 2px;
+    }
   }
 }
 
